<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_neighbour_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6EFF1"
    tools:actionBarNavMode="standard"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.neighbour_list.NeighbourDetail"
    tools:ignore="ExtraText,MissingClass,MissingConstraints"
    tools:layout_editor_absoluteY="81dp">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarDet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </android.support.v7.widget.Toolbar>



    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:id="@+id/nPicture"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:nestedScrollingEnabled="false"
        android:visibility="visible"
        app:layout_collapseMode="parallax"
        android:contentDescription="New neighbour"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/nName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="236dp"
        android:text="Afficher nom"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="1"
        android:visibility="visible"
        android:hint="My neighbours"
        android:textColor="#F8F4F4"
        android:textSize="34sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fav_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="Ajout Favoris"
        android:drawable="@drawable/ic_star_white_24dp"
        android:focusable="true"
        android:onClick="@drawable/ic_star_white_24dp"
        android:src="@drawable/ic_star_border_white_24dp"
        app:backgroundTint="#FFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="32dp"
        android:elevation="16dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/nPicture">

        <android.support.v7.widget.CardView
            android:id="@+id/activity_favorite_greeting1_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:elevation="16dp"
            app:layout_constraintTop_toBottomOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:elevation="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nName2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:paddingStart="15dp"
                    android:text="Afficher Nom"
                    android:textColor="#090909"
                    android:textSize="22sp"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/nAdress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:paddingStart="16dp"
                    android:text="Adress"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/nPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_baseline_local_phone_24"
                    android:paddingStart="16dp"
                    android:drawablePadding="16dp"
                    android:text="PhoneNumber"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="18sp"
                    android:visibility="visible"
                    android:gravity="center|left"/>

                <TextView
                    android:id="@+id/nSocialNetworks"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/ic_baseline_language_24"
                    android:gravity="center|left"
                    android:paddingStart="16dp"
                    android:drawablePadding="16dp"
                    android:text="SocialNetworks"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="18sp" />



    </LinearLayout>

</android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="390dp"
            android:layout_height="182dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:elevation="16dp"
            app:layout_constraintTop_toBottomOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:text="A propos de moi"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/activity_favorite_greeting2_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:textColor="@android:color/tertiary_text_light"
                    android:textSize="16sp"
                    android:visibility="visible" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <ImageButton
        android:id="@+id/previousButton"
        android:layout_width="96dp"
        android:layout_height="65dp"
        android:background="@null"
        android:contentDescription="@string/Button"
        android:drawableStart="@drawable/ic_baseline_keyboard_backspace_24"
        app:srcCompat="@drawable/ic_baseline_keyboard_backspace_24" />

</android.support.constraint.ConstraintLayout>